--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -16,33 +16,51 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc-aarch64-linux-gnu gcc build-essential \
           libssl-dev make bc bison flex libelf-dev zip
-      
-      - name: Prepare Kernel Build
+
+      - name: Setup Required Directories
         run: |
-          # Debug: List current files
-          echo "Current directory contents:"
-          ls -la
+          # Create vendor directory structure
+          sudo mkdir -p vendor/oplus/kernel/oplus_performance/sched_assist
+          sudo mkdir -p vendor/oplus/kernel/oplus_performance/locking/klockopt
           
-          # Debug: Show kernel directory structure
-          echo -e "\nKernel directory contents:"
-          ls -la kernel/
-          
-          # Debug: Show .config and Kconfig files
-          echo -e "\nConfig files in root:"
-          find . -maxdepth 1 -name "*config*"
-          
-          # Set build environment
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export CROSS_COMPILE=aarch64-linux-gnu-
-          
-          # List available configs
-          echo -e "\nAvailable defconfigs:"
-          ls -la arch/arm64/configs/
-          
-          # Debug: Show complete config list
-          echo -e "\nAll config files in repo:"
-          find . -name "*config*"
+          # Create sched_assist Kconfig
+          cat > vendor/oplus/kernel/oplus_performance/sched_assist/Kconfig << 'EOL'
+          config OPLUS_FEATURE_SCHED_ASSIST
+            bool "Sched assist optimize"
+            depends on CGROUP_SCHED
+            help
+              This is Oplus's kernel scheduler modification to optimize
+              scheduling behavior. This includes UI thread optimization
+              and other scheduling enhancements.
+
+          config OPLUS_FEATURE_SCHED_ASSIST_CPUFREQ
+            bool "Sched assist cpufreq"
+            depends on OPLUS_FEATURE_SCHED_ASSIST
+            help
+              Support CPUFreq enhancement for UI thread performance.
+
+          config OPLUS_SCHED_MT6893
+            bool "Sched assist for MTK6893"
+            depends on OPLUS_FEATURE_SCHED_ASSIST
+            help
+              Support MTK6893 specific scheduler optimizations.
+          EOL
+
+          # Create klockopt Kconfig
+          cat > vendor/oplus/kernel/oplus_performance/locking/klockopt/Kconfig << 'EOL'
+          config OPLUS_FEATURE_KLOCKOPT
+            bool "Kernel lock optimization"
+            depends on CGROUP_SCHED
+            help
+              This enables Oplus kernel lock optimization feature.
+              This includes various lock optimizations and enhancements
+              for better system performance.
+          EOL
+
+          # Debug output
+          echo "Created directories and Kconfig files:"
+          ls -la vendor/oplus/kernel/oplus_performance/sched_assist/
+          ls -la vendor/oplus/kernel/oplus_performance/locking/klockopt/
 
       - name: Configure Build
         run: |
@@ -50,22 +68,16 @@ jobs:
           export SUBARCH=arm64
           export CROSS_COMPILE=aarch64-linux-gnu-
           
-          # Create minimal config first
-          cat > .config << 'EOL'
-          # Minimal config
-          CONFIG_ARM64=y
-          CONFIG_CROSS_COMPILE="aarch64-linux-gnu-"
-          # Basic scheduling
-          CONFIG_SCHED_WALT=y
-          CONFIG_FAIR_GROUP_SCHED=y
-          CONFIG_SCHED_DEBUG=y
-          EOL
+          # Check configurations
+          echo "Available configurations:"
+          ls -la arch/arm64/configs/
           
-          # Make defconfig
+          # Create build
+          echo "Creating build configuration..."
           make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE k6891v1_64_k419_debug_defconfig
           
-          # Debug: Show final config
-          echo -e "\nFinal .config contents:"
+          # Show config summary
+          echo "Configuration summary:"
           head -n 50 out/.config
 
       - name: Build Kernel
@@ -74,26 +86,53 @@ jobs:
           export SUBARCH=arm64
           export CROSS_COMPILE=aarch64-linux-gnu-
           
-          # Build with verbose output
+          # Build with detailed output
           make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE -j$(nproc) V=1 2>&1 | tee build.log
           
-          # Check build status
-          if [ "${PIPESTATUS[0]}" -eq 0 ]; then
+          BUILD_STATUS=${PIPESTATUS[0]}
+          if [ $BUILD_STATUS -eq 0 ]; then
             echo "Build completed successfully!"
           else
-            echo "Build failed! Last 50 lines of build log:"
+            echo "Build failed with status $BUILD_STATUS"
+            echo "Last 50 lines of build log:"
             tail -n 50 build.log
-            exit 1
+            exit $BUILD_STATUS
           fi
 
-      - name: Upload Artifacts
+      - name: Package Build Results
+        if: always()
+        run: |
+          mkdir -p artifacts
+          
+          # Copy build outputs
+          cp -v out/.config artifacts/ 2>/dev/null || true
+          cp -v out/arch/arm64/boot/Image* artifacts/ 2>/dev/null || true
+          cp -v build.log artifacts/ 2>/dev/null || true
+          
+          # Copy Kconfig files for reference
+          cp -v vendor/oplus/kernel/oplus_performance/sched_assist/Kconfig artifacts/sched_assist_kconfig.txt || true
+          cp -v vendor/oplus/kernel/oplus_performance/locking/klockopt/Kconfig artifacts/klockopt_kconfig.txt || true
+          
+          # Directory listing
+          ls -laR out/ > artifacts/directory_listing.txt 2>&1 || true
+
+      - name: Upload Build Artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-build-files
+          name: kernel-build-outputs
+          path: artifacts/
+          if-no-files-found: warn
+
+      - name: Upload Debug Info
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-debug-info
           path: |
-            out/
-            build.log
             .config
             out/.config
+            build.log
+            vendor/oplus/kernel/oplus_performance/sched_assist/Kconfig
+            vendor/oplus/kernel/oplus_performance/locking/klockopt/Kconfig
           if-no-files-found: warn
